libEasyFsi/EasyFsi.h

typedef int       int_l; //! integer type used to represent local grid item id.
typedef long long int_g; //! integer type used to represent global grid item id.
typedef struct DynamicVector       DynamicVector;
typedef struct DynamicMatrix       DynamicMatrix;
typedef struct IndexSet            IndexSet;
typedef struct KdTree              KdTree;
typedef struct MeshConnectivity    MeshConnectivity;
typedef struct Boundary            Boundary;
typedef struct Communicator        Communicator;
typedef struct Application         Application;
//! @brief function prototype used to read boundary field data from current application.
typedef void(__stdcall* get_boundary_field_function)(const Application* app, const Boundary* bd, const char* name, int ncomp, FieldLocation loc,       double* data, void* user_data);
//! @brief function prototype used to write boundary field data to current application.
typedef void(__stdcall* set_boundary_field_function)(const Application* app, const Boundary* bd, const char* name, int ncomp, FieldLocation loc, const double* data, void* user_data);
    //--------------------------------------------------------
    // interface of IndexSet
    //--------------------------------------------------------

    IndexSet* is_new();
    void      is_delete(IndexSet** p_is);
    void      is_clear(IndexSet* is);
    int_l     is_add(IndexSet* is, int_g unique_id);
    int       is_contains(const IndexSet* is, int_g unique_id);
    int_g     is_l2g(const IndexSet* is, int_l id);
    int_l     is_g2l(const IndexSet* is, int_g unique_id);
    int_l     is_size(const IndexSet* is);
    const int_g* is_glist(const IndexSet* is);
    //--------------------------------------------------------
    // interface of MeshConnectivity
    //--------------------------------------------------------

    MeshConnectivity* mc_new();
    void mc_delete(MeshConnectivity** p_mc);
    void mc_clear(MeshConnectivity* mc);
    void mc_reserve(MeshConnectivity* mc, int_l max_nrow, int_l max_ndata);
    void mc_push_back(MeshConnectivity* mc, int n, const int_l* data);
    const int_l* mc_ia(const MeshConnectivity* mc);
    const int_l* mc_ja(const MeshConnectivity* mc);
    int_l mc_nrow (const MeshConnectivity* mc);
    int_l mc_ndata(const MeshConnectivity* mc);
    int_l mc_row_size(const MeshConnectivity* mc, int_l row);
    int_l mc_row_data(const MeshConnectivity* mc, int_l row, int_l idata);
    const IndexSet* bd_nodes(const Boundary* bd);
    const MeshConnectivity* bd_face_nodes(const Boundary* bd);
    const KdTree* bd_kdtree(const Boundary* bd);
    void  bd_read_gmsh(Boundary* bd, const char* file);
    void cm_set_function(Communicator* cm, const char* name, void* value);
    //! @brief Set field functions
    //! @param app The object pointer of application created by \app_new.
    //! @param getter    A function pointer used to read outgoing fields from this application.
    //! @param setter    A function pointer used to writ incoming fields to this application.
    void app_set_field_func(Application* app, get_boundary_field_function getter, set_boundary_field_function setter);