easyfsi.f90


! get IndexSet object of boundary nodes.
function bd_nodes(bd) bind(c,name="bd_nodes")
    import :: c_ptr
    type(c_ptr), intent(in), value :: bd
    type(c_ptr) :: bd_nodes
end function bd_nodes

! get MeshConnectivity object of boundary faces.
function bd_face_nodes(bd) bind(c,name="bd_face_nodes")
    import :: c_ptr
    type(c_ptr), intent(in), value :: bd
    type(c_ptr) :: bd_face_nodes
end function bd_face_nodes

! get KdTree object of boundary nodes.
function bd_kdtree(bd) bind(c,name="bd_kdtree")
    import :: c_ptr
    type(c_ptr), intent(in), value :: bd
    type(c_ptr) :: bd_kdtree
end function bd_kdtree

subroutine bd_read_gmsh(bd,filename) bind(c,name="bd_read_gmsh")
    import :: c_ptr,c_char
    type(c_ptr), intent(in), value :: bd
    character(kind=c_char), dimension(*), intent(in) :: filename
end subroutine bd_read_gmsh

!-----------------------------------------
! interfaces for MeshConnectivity
!-----------------------------------------

function mc_new() bind(c,name="mc_new")
    import :: c_ptr
    type(c_ptr) :: mc_new
end function mc_new

subroutine mc_delete(mc) bind(c,name="mc_delete")
    import :: c_ptr
    type(c_ptr), intent(inout) :: mc
end subroutine mc_delete

subroutine mc_clear(mc) bind(c,name="mc_clear")
    import :: c_ptr
    type(c_ptr), intent(in), value :: mc
end subroutine mc_clear

subroutine mc_reserve(mc,max_nrow,max_ndata) bind(c,name="mc_reserve")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int), intent(in), value :: max_nrow,max_ndata
end subroutine mc_reserve

subroutine mc_push_back(mc,n,pdata) bind(c,name="mc_push_back")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int), intent(in), value :: n
    integer(c_int), dimension(*), intent(in) :: pdata
end subroutine mc_push_back

function mc_ia(mc) bind(c,name="mc_ia")
    import :: c_ptr!,c_int
    type(c_ptr), intent(in), value :: mc
    type(c_ptr) :: mc_ia
end function mc_ia

function mc_ja(mc) bind(c,name="mc_ja")
    import :: c_ptr!,c_int
    type(c_ptr), intent(in), value :: mc
    type(c_ptr) :: mc_ja
end function mc_ja

function mc_nrow(mc) bind(c,name="mc_nrow")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int) :: mc_nrow
end function mc_nrow

function mc_ndata(mc) bind(c,name="mc_ndata")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int) :: mc_ndata
end function mc_ndata

function mc_row_size(mc,row) bind(c,name="mc_row_size")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int), value :: row
    integer(c_int) :: mc_row_size
end function mc_row_size

function mc_row_data(mc,row,idata) bind(c,name="mc_row_data")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: mc
    integer(c_int), intent(in), value :: row,idata
    integer(c_int) :: mc_row_data
end function mc_row_data

!-----------------------------------------
! interfaces for IndexSet
!-----------------------------------------

function is_new() bind(c,name="is_new")
    import :: c_ptr
    type(c_ptr) :: is_new
end function is_new

subroutine is_delete(is) bind(c,name="is_delete")
    import :: c_ptr
    type(c_ptr), intent(inout) :: is
end subroutine is_delete

subroutine is_clear(is) bind(c,name="is_clear")
    import :: c_ptr
    type(c_ptr), intent(in), value :: is
end subroutine is_clear

function is_contains(is, unique_id) bind(c,name="is_contains")
    import :: c_ptr,c_long_long,c_int
    type(c_ptr), intent(in), value :: is
    integer(c_long_long), intent(in), value :: unique_id
    integer(c_int) :: is_contains
end function is_contains

function is_add(is, unique_id) bind(c,name="is_add")
    import :: c_ptr,c_int,c_long_long
    type(c_ptr), intent(in), value :: is
    integer(c_long_long), intent(in), value :: unique_id
    integer(c_int) :: is_add
end function is_add

function is_l2g(is, ilocal) bind(c,name="is_l2g")
    import :: c_ptr,c_int,c_long_long
    type(c_ptr), intent(in), value :: is
    integer(c_int), intent(in), value :: ilocal
    integer(c_long_long) :: is_l2g
end function is_l2g

function is_g2l(is, iglobal) bind(c,name="is_g2l")
    import :: c_ptr,c_int,c_long_long
    type(c_ptr), intent(in), value :: is
    integer(c_long_long), intent(in), value :: iglobal
    integer(c_int) :: is_g2l
end function is_g2l

function is_size(is) bind(c,name="is_size")
    import :: c_ptr,c_int
    type(c_ptr), intent(in), value :: is
    integer(c_int) :: is_size
end function is_size

function is_glist(is) bind(c,name="is_glist")
    import :: c_ptr,c_int,c_long_long
    type(c_ptr), intent(in), value :: is
    type(c_ptr) :: is_glist
end function is_glist

!-----------------------------------------
! interfaces for KdTree
!-----------------------------------------
!TBD

!-----------------------------------------
! interfaces for DynamicMatrix
!-----------------------------------------
!TBD

!-----------------------------------------
! interfaces for DynamicVector
!-----------------------------------------
!TBD

end interface

contains

subroutine cm_set_function_mpi_send(cm,func)
    use iso_c_binding
    type(c_ptr), intent(in), value :: cm
    procedure(mpi_send_t), intent(in), pointer :: func
    call cm_set_function(cm,'MPI_Send'//char(0),c_funloc(func))
end subroutine cm_set_function_mpi_send
subroutine cm_set_function_mpi_recv(cm,func)
    use iso_c_binding
    type(c_ptr), intent(in), value :: cm
    procedure(mpi_recv_t), intent(in), pointer :: func
    call cm_set_function(cm,'MPI_Recv'//char(0),c_funloc(func))
end subroutine cm_set_function_mpi_recv

subroutine app_set_field_func_wapper(app, getter, setter)
    use iso_c_binding
    type(c_ptr), intent(in), value :: app
    procedure(get_boundary_field_t), intent(in), pointer :: getter
    procedure(set_boundary_field_t), intent(in), pointer :: setter
    call app_set_field_func(app,c_funloc(getter),c_funloc(setter))
end subroutine app_set_field_func_wapper

end module easyfsi